--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,33 @@ body {
 
 /* || typography */
 
-font[size="7"], font[size="6"], font[size="5"] {
+/*Potentially uneeded section*/
+
+/* font[size="7"], font[size="6"], font[size="5"] {
   font-family: 'Sonsie One', cursive;
   color: #2a2a2a;
+} */
+
+h1, h2, h3 {
+  font-family: 'Sonsie One', cursive;
+  color: #2a2a2a;
+}
+
+
+h1 {
+  font-size: 3vw;
+  color: white;
+  text-shadow: 2px 2px 10px black;
+  text-align: center;  
+}
+
+h2{
+  font-size: 2vw;
+  text-align: center;
+}
+
+h3{
+  font-size: 1vw;
 }
 
 p, input, li, table, label {
@@ -28,12 +52,14 @@ p, input, li, table, label {
   color: #2a2a2a;
 }
 
-font[size="7"] {
+/*Bad sematics*/
+
+/* font[size="7"] {
   font-size: 4rem;
   text-align: center;
   color: white;
   text-shadow: 2px 2px 10px black;
-}
+} */
 
 font[size="6"] {
   font-size: 3rem;
@@ -51,8 +77,9 @@ p, li, table {
 
 /* || header layout */
 
-div[class="nav"], article, footer, .secondary {
-  background-color: green;
+nav, article, footer, .secondary {
+  background-color: white;
+
 }
 
 article, footer, .secondary {
@@ -63,7 +90,9 @@ article {
   margin-right: 10px;
 }
 
-div[class="nav"] {
+
+
+nav {
   height: 50px;
   background-color: ff80ff;
   display: flex;
@@ -71,20 +100,20 @@ div[class="nav"] {
   margin-bottom: 10px;
 }
 
-div[class="nav"] ul {
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-div[class="nav"] li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-div[class="nav"] a {
+nav a {
   display: inline-block;
   font-size: 2rem;
   text-transform: uppercase;
@@ -92,7 +121,7 @@ div[class="nav"] a {
   color: black;
 }
 
-div[class="nav"] .search {
+nav .search {
   flex: 1;
   display: flex;
   align-items: center;
@@ -159,6 +188,10 @@ tbody tr:nth-child(odd) {
   background-color: #def;
 }
 
+caption{
+  caption-side: bottom;
+}
+
 /* styling content images and audio */
 
 img, audio {
@@ -193,16 +226,27 @@ audio {
   margin-bottom: 3rem;
 }
 
+/* .flex-pair{
+  margin-left: -20vw;
+} */
+
+.flex-pair input{
+  width: 40vw;
+}
+
 .comment-form .flex-pair {
   display: flex;
   padding: 0 3rem 1rem;
+  width: 50vw;
+  align-items: flex-end;
+
 }
 
 .comment-form label {
-  align-self: center;
   flex: 2;
   text-align: right;
 }
+
 
 .comment-form input {
   margin-left: 1rem;
@@ -212,6 +256,10 @@ audio {
 .show-hide {
   text-align: center;
   width: 150px;
+}
+
+#commentbutton:focus-visible{
+  outline: 2px solid crimson;
 }
 
 .comment-form input, .comment-form label, .show-hide {
@@ -247,4 +295,24 @@ audio {
 
 .comment-container li p:nth-child(2) {
   flex: 5;
+}
+
+.transcript-container {
+  width: 25vw;
+  margin: 10px auto;
+  border: 1px solid #ccc;
+  min-height: 38px;
+  font-size: 18%;
+}
+
+.transcript {
+  height: 0;
+  width: 100%;
+  overflow: auto;
+  padding: 0 10px;
+}
+
+.transcript-container button {
+  width: 100%;
+  height: 36px;
 }
