--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,19 @@ h1, h2, h3 {
 
 
 h1 {
-  font-size: 3vw;
+  font-size: 5em;
   color: white;
   text-shadow: 2px 2px 10px black;
   text-align: center;  
 }
 
 h2{
-  font-size: 2vw;
+  font-size: 3rem;
   text-align: center;
 }
 
 h3{
-  font-size: 1vw;
+  font-size: 2rem;
 }
 
 p, input, li, table, label {
